@@ -1,6 +1,7 @@
 Unreleased Version 2.3.1-pre
  * Fix: Force canvas view dimensions to be even on hardware renderers, since otherwise the view gets scrunched on some graphics cards.
  * Fix: Make MyPaint brushes properly handle input values exactly on the point of a stair-step curve. Thanks Blozzom for testing.
+ * Fix: Don't show MyPaint curves as continuing in a straight line outside the first and last point, sincet they don't.
 
 2025-11-18 Version 2.3.0
  * Fix: Don't show "exit layer view" notice when there's no canvas.
